# python-doctor

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  build_exe.py  demo.yaml  install.sh  pyproject.toml  run.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml  test.yml
docs/: index.html
python_doctor/: __init__.py  cli.py  config.py  profile.py  rules.py  scorer.py  state.py
python_doctor/analyzers/: __init__.py  _util.py  bandit_analyzer.py  complexity.py  dependency_analyzer.py  docstring_analyzer.py  exceptions_analyzer.py  imports_analyzer.py  ruff_analyzer.py  structure.py  vulture_analyzer.py  zen_analyzer.py
scripts/: benchmark.sh
skills/python-doctor/: SKILL.md
tests/: test_bandit_analyzer.py  test_docstring_analyzer.py  test_exceptions_analyzer.py  test_imports_analyzer.py  test_rules.py  test_scorer.py  test_state.py  test_zen_analyzer.py
