[project]
name = "python-doctor"
version = "2026.2.22"
description = "One command. One score. Built for AI agents. Scans Python codebases and returns a 0-100 health score."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Saikat Kumar Dey", email = "deysaikatkumar@gmail.com"},
]
keywords = ["python", "linting", "code-quality", "ai-agents", "static-analysis", "developer-tools"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "ruff>=0.4.0",
    "bandit>=1.7.0",
    "vulture>=2.11",
    "radon>=6.0.0",
]

[project.scripts]
python-doctor = "python_doctor.cli:main"

[project.urls]
Homepage = "https://github.com/saikatkumardey/python-doctor"
Repository = "https://github.com/saikatkumardey/python-doctor"
Issues = "https://github.com/saikatkumardey/python-doctor/issues"
Changelog = "https://github.com/saikatkumardey/python-doctor/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pyinstaller>=6.0", "bumpver>=2024.1"]

[tool.bumpver]
current_version = "2026.2.22"
version_pattern = "YYYY.M.D"
commit_message = "Bump version to {new_version}"
tag_message = "v{new_version}"
tag_format = "v{new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"python_doctor/__init__.py" = ['__version__ = "{version}"']

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [".venv", "venv", "node_modules", "__pycache__", ".git", ".tox"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
